cmake_minimum_required(VERSION 3.15)
project(BoostCheck)
find_package(Boost REQUIRED)        #(Boost 1.88.0 REQUIRED)
if(Boost_FOUND)
  message(STATUS "           **Boost found**              ")
  message(STATUS "  --------------------------------------")
  message(STATUS "  Boost_INCLUDE_DIR=${Boost_INCLUDE_DIR}")
  message(STATUS "  Boost_LIBRARY_DIR=${Boost_LIBRARY_DIR}")
  message(STATUS "  Boost_LIBRARIES  =${Boost_LIBRARIES}  ")
  message(STATUS "  --------------------------------------")
endif()